--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -55,7 +55,9 @@ spec:
 
     stages {
         stage('Initialize') {
-            when { branch 'master' }
+            when { 
+                branch 'master' || branch 'automation-updates'
+             }
             steps {
                 script {
                     def imageTag = "${env.GIT_COMMIT.take(7)}-${env.BUILD_NUMBER}"
@@ -66,7 +68,9 @@ spec:
         }
 
         stage('Security Scan: Code (SAST & SCA)') {
-            when { branch 'master' }
+            when { 
+                branch 'master' || branch 'automation-updates'
+             }
 
             steps {
                 withCredentials([string(credentialsId: 'snyk-token', variable: 'SNYK_TOKEN')]) {
@@ -84,7 +88,9 @@ spec:
         }
 
         stage('Lint & Test') {
-            when { branch 'master' }
+            when { 
+                branch 'master' || branch 'automation-updates'
+             }
 
             steps {
                 runTests(appDir: 'app')
@@ -92,7 +98,9 @@ spec:
         }
 
         stage('Build & Push Image') {
-            when { branch 'master' }
+            when { 
+                branch 'master' || branch 'automation-updates'
+             }
 
             steps {
                 script {
@@ -109,7 +117,9 @@ spec:
 
 
         stage('Security Scan: Image (Trivy)') {
-            when { branch 'master' }
+            when { 
+                branch 'master' || branch 'automation-updates'
+             }
 
             steps {
                 container('trivy') {
@@ -126,7 +136,9 @@ spec:
         }
 
         stage('Deploy to Cluster (GitOps way)') {
-            when { branch 'master' }
+            when { 
+                branch 'master' || branch 'automation-updates'
+             }
 
             steps {
                 deployToCluster(
@@ -138,7 +150,9 @@ spec:
         }
 
         stage('Push automation updates') {
-            when { branch 'master'}
+            when { 
+                branch 'master' || branch 'automation-updates'
+             }
             steps {
                 container('node') {
                     script {
