--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -55,10 +55,12 @@ spec:
 
     stages {
         stage('Initialize') {
-            when { 
-               anyOf {
-                    branch 'master';
-                    branch 'automation-updates'
+            when {
+                not {
+                    anyOf {
+                        branch 'master';
+                        branch 'automation-updates'
+                    }
                 }
             }
             steps {
@@ -71,13 +73,14 @@ spec:
         }
 
         stage('Security Scan: Code (SAST & SCA)') {
-            when { 
-               anyOf {
-                    branch 'master';
-                    branch 'automation-updates'
+            when {
+                not {
+                    anyOf {
+                        branch 'master';
+                        branch 'automation-updates'
+                    }
                 }
             }
-
             steps {
                 withCredentials([string(credentialsId: 'snyk-token', variable: 'SNYK_TOKEN')]) {
                     container('snyk') {
@@ -94,26 +97,28 @@ spec:
         }
 
         stage('Lint & Test') {
-            when { 
-               anyOf {
-                    branch 'master';
-                    branch 'automation-updates'
+            when {
+                not {
+                    anyOf {
+                        branch 'master';
+                        branch 'automation-updates'
+                    }
                 }
             }
-
             steps {
                 runTests(appDir: 'app')
             }
         }
 
         stage('Build & Push Image') {
-            when { 
-               anyOf {
-                    branch 'master';
-                    branch 'automation-updates'
+            when {
+                not {
+                    anyOf {
+                        branch 'master';
+                        branch 'automation-updates'
+                    }
                 }
             }
-
             steps {
                 script {
                     def digestFileName = buildAndPush(
@@ -126,16 +131,15 @@ spec:
             }
         }
 
-
-
         stage('Security Scan: Image (Trivy)') {
-            when { 
-               anyOf {
-                    branch 'master';
-                    branch 'automation-updates'
+            when {
+                not {
+                    anyOf {
+                        branch 'master';
+                        branch 'automation-updates'
+                    }
                 }
             }
-
             steps {
                 container('trivy') {
                     script {
@@ -151,13 +155,14 @@ spec:
         }
 
         stage('Deploy to Cluster (GitOps way)') {
-            when { 
-               anyOf {
-                    branch 'master';
-                    branch 'automation-updates'
+            when {
+                not {
+                    anyOf {
+                        branch 'master';
+                        branch 'automation-updates'
+                    }
                 }
             }
-
             steps {
                 deployToCluster(
                     imageURI: env.FULL_IMAGE_NAME,
@@ -168,7 +173,7 @@ spec:
         }
 
         stage('Push automation updates') {
-            when { branch 'master' }
+            when { branch 'master' } // This stage ONLY runs on master
             steps {
                 container('node') {
                     script {
@@ -189,5 +194,3 @@ spec:
         }
     }
 }
-
-
